src/test/AbstractFail/AbstractFail.expected
error: AbstractFail.panda:1:1: non-abstract class AbstractFail does not implement abstract method abstractMethodInConcreteClass()
1 error
